# tallydash

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  Reflex_CopilotKit_Tally_ODBC_Integration.docx  Reflex_CopilotKit_Tally_ODBC_Integration.txt  docker-compose.yml  environment.yml  jupyter_lab_config.py  pyproject.toml  run.py  rxconfig.py
docs/: API_REFERENCE.md  INSTALLATION.md
notebooks/: 00_setup_and_exploration.ipynb
src/tallydash/: __init__.py  app.py
src/tallydash/components/: __init__.py  charts.py  chat.py  dashboard.py
src/tallydash/config/: settings.py
src/tallydash/database/: __init__.py  connection.py  queries.py
src/tallydash/models/: __init__.py  app_models.py  tally_models.py
src/tallydash/services/: __init__.py  ai_service.py  tally_service.py
src/tallydash/utils/: __init__.py  helpers.py  security.py
tests/: test_security.py  test_tally_service.py
