[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tallydash"
version = "0.1.0"
description = "TallyDash: Reflex + CopilotKit + Tally ODBC Integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # Web framework
    "reflex>=0.4.0",
    
    # Database connectivity
    "pyodbc>=4.0.39",
    "sqlalchemy>=2.0.0",
    
    # AI and NLP
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "copilotkit>=0.1.0",
    
    # Configuration and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # Visualization
    "plotly>=5.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Utilities
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    
    # Caching and performance
    "redis>=5.0.0",
    "diskcache>=5.6.0",
    
    # Security
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "ruff>=0.0.280",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "W", "F", "I", "N", "B", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"